fix(scrollbar): fixed scrollbar width

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -262,8 +262,8 @@ body {
 }
 
 *::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  width: 1px;
+  height: 1px;
 }
 
 *::-webkit-scrollbar-track {
